[package]
name = "mirivis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miri = { git = "https://github.com/rust-lang/miri.git", rev = "b96610b3de5bc9fd346d90700ba881aca8d503f0" }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_plugin = "0.5"
textwrap = "0.15"
anyhow = "1"
flowistry = "0.5.23"
ts-rs = "6"

[package.metadata.rust-analyzer]
rustc_private = true
