[package]
name = "situ-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.12"
tokio = {version = "1", features = ["full"]}
anyhow = "1"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.17"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
ts-rs = "6"
mirivis = { path = "../mirivis" }